# openapi-tester

./: .gitignore  main.py  pyproject.toml
tester/: openapi_schema.py  tester.py
