[tool.poetry]
name = "openapi-tester"
version = "0.1.0"
description = ""
authors = ["Vinicius Mesel <bioinfo.vinicius@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
